--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -15,13 +15,28 @@
   <%= image_tag('うんこ君.gif', class: 'audioButton') %>
   <%= javascript_tag do %>
       document.querySelector('.audioButton').onclick = function () {
+        var random = Math.floor(Math.random() * 6);
+        switch(random) {
+          case 0:
+              document.querySelector('#audio').src = '/assets/綿引うんこ.m4a';
+              break;
+          case 1:
+              document.querySelector('#audio').src = '/assets/森泉うんこ.m4a';
+              break;
+          case 2:
+              document.querySelector('#audio').src = '/assets/押田うんこ.m4a';
+              break;
+          case 3:
+            document.querySelector('#audio').src = '/assets/根岸うんこ.m4a';
+            break;
+          case 4:
+            document.querySelector('#audio').src = '/assets/高久うんこ.m4a';
+            break;
+          case 5:
+            document.querySelector('#audio').src = '/assets/三宅うんこ.m4a';
+            break;
+        };
         document.querySelector('#audio').play();
-      }
-
-      
-      
-      console.log(document.querySelector('#audio'));
-      
-    
+      };
   <% end %>
 </body>
