--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -7,6 +7,7 @@
     bottom: 0px;
     left: 0px;
     margin: auto;
+    cursor:pointer;
   }
 </style>
 
@@ -14,7 +15,7 @@
   <%= audio_tag('高久うんこ.m4a', id: 'audio') %>
   <%= image_tag('うんこ君.gif', class: 'audioButton') %>
   <%= javascript_tag do %>
-      document.querySelector('.audioButton').onTouchStart = function () {
+      document.querySelector('.audioButton').onclick = function () {
         var random = Math.floor(Math.random() * 6);
         switch(random) {
           case 0:
