--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -15,7 +15,7 @@
   <%= audio_tag('高久うんこ.m4a', id: 'audio') %>
   <%= image_tag('うんこ君.gif', class: 'audioButton') %>
   <%= javascript_tag do %>
-      document.querySelector('.audioButton').onclick = function () {
+      document.querySelector('.audioButton').tap = function () {
         var random = Math.floor(Math.random() * 6);
         switch(random) {
           case 0:
