--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -13,31 +13,35 @@
 
 <body>
   <%= audio_tag('高久うんこ.m4a', id: 'audio') %>
-  <%= image_tag('うんこ君.gif', class: 'audioButton') %>
+
+  <%= button_tag type: 'button', onclick: "hoge()" do %>
+    <%= image_tag('うんこ君.gif', class: 'audioButton') %>
+  <% end %>
+
   <%= javascript_tag do %>
-      document.querySelector('.audioButton').tap = function () {
-        var random = Math.floor(Math.random() * 6);
-        switch(random) {
-          case 0:
-              document.querySelector('#audio').src = '/assets/綿引うんこ.m4a';
-              break;
-          case 1:
-              document.querySelector('#audio').src = '/assets/森泉うんこ.m4a';
-              break;
-          case 2:
-              document.querySelector('#audio').src = '/assets/押田うんこ.m4a';
-              break;
-          case 3:
-            document.querySelector('#audio').src = '/assets/根岸うんこ.m4a';
+    function hoge () {
+      var random = Math.floor(Math.random() * 6);
+      switch(random) {
+        case 0:
+            document.querySelector('#audio').src = '/assets/綿引うんこ.m4a';
             break;
-          case 4:
-            document.querySelector('#audio').src = '/assets/高久うんこ.m4a';
+        case 1:
+            document.querySelector('#audio').src = '/assets/森泉うんこ.m4a';
             break;
-          case 5:
-            document.querySelector('#audio').src = '/assets/三宅うんこ.m4a';
+        case 2:
+            document.querySelector('#audio').src = '/assets/押田うんこ.m4a';
             break;
-        };
-        document.querySelector('#audio').play();
+        case 3:
+          document.querySelector('#audio').src = '/assets/根岸うんこ.m4a';
+          break;
+        case 4:
+          document.querySelector('#audio').src = '/assets/高久うんこ.m4a';
+          break;
+        case 5:
+          document.querySelector('#audio').src = '/assets/三宅うんこ.m4a';
+          break;
       };
+      document.querySelector('#audio').play();
+    }
   <% end %>
 </body>
