--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -22,33 +22,36 @@
     var playbutton = document.getElementById('play');
     playbutton.addEventListener('click', function() {
       audio.play();
+      setTimeout(
+        function() {
+          change_audio();
+        }
+        ,400
+      )
     });
 
-    setInterval(
-      function() {
-        var random = Math.floor(Math.random() * 6);
-        switch(random) {
-          case 0:
-              document.querySelector('#audio').src = '/assets/綿引うんこ.m4a';
-              break;
-          case 1:
-              document.querySelector('#audio').src = '/assets/森泉うんこ.m4a';
-              break;
-          case 2:
-              document.querySelector('#audio').src = '/assets/押田うんこ.m4a';
-              break;
-          case 3:
-            document.querySelector('#audio').src = '/assets/根岸うんこ.m4a';
+    function change_audio() {
+      var random = Math.floor(Math.random() * 6);
+      switch(random) {
+        case 0:
+            document.querySelector('#audio').src = '/assets/綿引うんこ.m4a';
             break;
-          case 4:
-            document.querySelector('#audio').src = '/assets/高久うんこ.m4a';
+        case 1:
+            document.querySelector('#audio').src = '/assets/森泉うんこ.m4a';
             break;
-          case 5:
-            document.querySelector('#audio').src = '/assets/三宅うんこ.m4a';
+        case 2:
+            document.querySelector('#audio').src = '/assets/押田うんこ.m4a';
             break;
-        };
-      }
-      , 2000
-    )
+        case 3:
+          document.querySelector('#audio').src = '/assets/根岸うんこ.m4a';
+          break;
+        case 4:
+          document.querySelector('#audio').src = '/assets/高久うんこ.m4a';
+          break;
+        case 5:
+          document.querySelector('#audio').src = '/assets/三宅うんこ.m4a';
+          break;
+      };
+    };
   <% end %>
 </body>
